--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Please use the following command to install requirements for python/virtualenv
 # python -m pip install -r requirements.txt -f https://download.pytorch.org/whl/cu113/torch_stable.html
 
-torch==1.10.0+cu113
+torch==1.11.0
 torchvision
 numpy
 h5py==3.6.0
